# grok2api

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.browser  README.md  docker-compose.example.yml  pyproject.toml  requirements.txt
docs/: architecture.md  full-flow.md
grok2api/: __main__.py  browser_adapter.py  browser_kernel.py  config.py  cookies.py  media_store.py  models.py  server.py  store.py
scripts/: browser-entrypoint.sh  docker-run-jlesage.sh  install-warp-proxy-bridge.sh
tests/: test_cookies.py  test_server_contract.py
