[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok2api"
version = "0.1.0"
description = "Grok Web profile-browser reverse proxy with account pool and OpenAI-compatible API surface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "docker>=7.1",
  "playwright>=1.54",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.45",
]
dev = [
  "pytest>=8",
]

[project.scripts]
grok2api = "grok2api.__main__:main"

[tool.setuptools.packages.find]
include = ["grok2api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
